--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "skytrak-chkr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myusername.github.io/skytrak",
+  "homepage": "https://mjrode.github.io/skytrak",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
