--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "skytrak-chkr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mjrode.github.io/skytrak",
+  "homepage": "https://mj.github.io/skytrak",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -11,6 +13,8 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "axios": "^0.21.1",
+    "fontsource-roboto": "^4.0.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
